--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="col-md-6">
         <form>
           <div class="form-group">
-            <label for="">input</label>
-            <input type="text" class="form-control" id="input">
+            <label for="population">Population</label>
+            <input data-population type="text" class="form-control" id="population" placeholder="Population">
           </div>
           <div class="form-group">
             <label for="">input</label>
