add time to elapse input

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             <input data-population type="text" class="form-control" id="population" placeholder="Population">
           </div>
           <div class="form-group">
+            <label for="timeToElapse">Time</label>
+            <input data-time-to-elapse type="text" class="form-control" id="timeToElapse" placeholder="Time to Elapse">
+          </div>
+          <div class="form-group">
             <label for="">input</label>
             <input type="text" class="form-control" id="input">
           </div>
