add reported cases input

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <input data-time-to-elapse type="text" class="form-control" id="timeToElapse" placeholder="Time to Elapse">
           </div>
           <div class="form-group">
+            <label for="reportedCases">Reported Cases</label>
+            <input data-reported-cases type="text" class="form-control" id="reportedCases" placeholder="Reported Cases">
+          </div>
+          <div class="form-group">
             <label for="">input</label>
             <input type="text" class="form-control" id="input">
           </div>
