add total hospital beds input

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <input data-reported-cases type="text" class="form-control" id="reportedCases" placeholder="Reported Cases">
           </div>
           <div class="form-group">
+            <label for="totalHospitalBeds">Total Hospital Beds</label>
+            <input data-total-hospital-beds type="text" class="form-control" id="totalHospitalBeds" placeholder="Total Hospital Beds">
+          </div>
+          <div class="form-group">
             <label for="">input</label>
             <input type="text" class="form-control" id="input">
           </div>
