--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@
             <label for="totalHospitalBeds">Total Hospital Beds</label>
             <input data-total-hospital-beds type="text" class="form-control" id="totalHospitalBeds" placeholder="Total Hospital Beds">
           </div>
-          <div class="form-group">
-            <label for="">input</label>
-            <input type="text" class="form-control" id="input">
-          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          
+          <button data-go-estimate type="submit" class="btn btn-primary">Estimate</button>
         </form>
       </div>
       <div class="col-md-3"></div>
