add period type input

--- a/index.html
+++ b/index.html
@@ -31,7 +31,14 @@
             <label for="totalHospitalBeds">Total Hospital Beds</label>
             <input data-total-hospital-beds type="text" class="form-control" id="totalHospitalBeds" placeholder="Total Hospital Beds">
           </div>
-          
+          <div class="form-group">
+            <label for="periodType">Example select</label>
+            <select data-period-type class="form-control" id="periodType">
+              <option>Days</option>
+              <option>Weeks</option>
+              <option>Months</option>
+            </select>
+          </div>
           <button data-go-estimate type="submit" class="btn btn-primary">Estimate</button>
         </form>
       </div>
