added container div for better wrapping

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <h1>Covid 19 Estimator</h1>
-    
+    <div class="container">
     <div class="row">
       <div class="col-md-3"></div>
       <div class="col-md-6">
@@ -47,6 +47,7 @@
         </form>
       </div>
       <div class="col-md-3"></div>
+    </div>
     </div>
     
     <!-- Optional JavaScript -->
